fix left panel items spacing and consistency

--- a/src/resources/css/app.css
+++ b/src/resources/css/app.css
@@ -56,7 +56,7 @@
     --ticket-card-border-color: #4a90e2;
     --ticket-card-background: #fff;
     --ticket-card-border-radius: var(--border-radius);
-    --ticket-card-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    --ticket-card-box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px;
     --scrollbar-thumb: #4a90e2;
     overflow-y: scroll;
 }
@@ -216,14 +216,13 @@ a:active {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 8px;
+  margin-top: 24px;
   margin-bottom: 8px;
   gap: 4px;
 }
 
 .checkboxes-container-header {
   color: var(--forms-placeholder-text-color);
-  align-self: center;
   font-size: var(--label-size);
 }
 
@@ -261,22 +260,26 @@ a:active {
 
 .left-panel-refresh-data {
   color: var(--text-color);
-  border: 1px dashed yellow;
+  border: 1px dashed;
+  border-color: var(--border-color-left-panel);
   text-align: center;
   border-radius: 8px;
   padding: 20px;
   margin-top: 24px;
   font-size: 2rem;
+  box-shadow: var(--ticket-card-box-shadow);
 }
 
 .left-panel-testing-stats {
   color: var(--text-color);
-  border: 1px dashed red;
+  border: 1px dashed;
+  border-color: var(--border-color-left-panel);
   border-radius: 8px;
   text-align: left;
   padding: 20px;
   margin-top: 24px;
   background-color: var(--background-color-left-panel);
+  box-shadow: var(--ticket-card-box-shadow);
 }
 
 .search-results {
@@ -307,6 +310,7 @@ a:active {
   border-radius: var(--forms-border-radius);
   margin-bottom: 4px;
   box-sizing: border-box;
+  box-shadow: var(--ticket-card-box-shadow);
 }
 
 .search-input::placeholder {
@@ -355,6 +359,7 @@ input[type="checkbox"] {
   border: 1px solid #fff;
   border-radius: var(--forms-border-radius);
   margin-bottom: 4px;
+  box-shadow: var(--ticket-card-box-shadow);
 }
 
 .dropdown:-moz-focusring {
@@ -391,6 +396,7 @@ input[type="checkbox"] {
   border-radius: var(--forms-border-radius);
   margin-bottom: 3px;
   box-sizing: border-box;
+  box-shadow: var(--ticket-card-box-shadow);
 }
 
 .datepicker-input:focus,
